Corrección de errores y realización de html y css básico, terminado.

--- a/proyecto final/proyecto-final/angular.json
+++ b/proyecto final/proyecto-final/angular.json
@@ -23,11 +23,12 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
-              "final-proyect/proyecto final/proyecto-final/node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": []
-            " final-proyect/proyecto final/proyecto-final/node_modules/bootstrap/dist/js/bootstrap.js"
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
