--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 proyecto final/proyecto-final/src/app/app-routing.module.ts
+proyecto final/proyecto-final/src/app/components/redesociales/redesociales.component.css
+proyecto final/proyecto-final/src/app/components/redesociales/redesociales.component.css
+proyecto final/proyecto-final/src/app/components/redesociales/redesociales.component.html
+proyecto final/proyecto-final/src/app/components/redesociales/redesociales.component.spec.ts
+proyecto final/proyecto-final/src/app/components/redesociales/redesociales.component.css
